# Dinkplay_Sources

./: CMakeLists.txt  ChangePlay.cpp  ChangePlay.hpp  Directory.cpp  Directory.hpp  Interval.cpp  Interval.hpp  IntervalWorker.cpp  IntervalWorker.hpp  LICENSE  Main.qml  Media.cpp  Media.hpp  Player.cpp  Player.hpp  README.md  Top.cpp  Top.hpp  _main.cpp  main.cpp  main.hpp  qml.qrc
Android/: README.md
Apple/: CMakeLists.txt  DEFINES.qml  README.md
Apple/closed_sources/: README.md  media_cat0.cpp
Apple/iOS/: appDinkplay.entitlements
Apple/ui/: MediaControls.qml  Playing.qml  TopControls.qml
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: splash.xml
android/res/values/: apptheme.xml
android/src/com/denkplay/states/: DenkActivity.java  DenkService.java
iOS/: Info.plist
iOS/src/: MyMPRemoteCC.h  MyMPRemoteCC.mm
iOS_Binaries/: qrc_qml.cpp
ma_lib/: miniaudio.h  miniaudio.m
ui/: About.qml  Audio.qml  MediaControls.qml  Playing.qml  Settings.qml  TopControls.qml
